k8s-back.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-k8s-back
  labels:
    app: k8s-learning-back
spec:
  type: NodePort
  selector:
    app-name: k8s-learning-back
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-back
  labels:
    app-name: k8s-learning-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app-name: k8s-learning-back
  template:
    metadata:
      labels:
        app-name: k8s-learning-back
    spec:
      containers:
        - image: avanesyanara/k8s-learning-back
          imagePullPolicy: "IfNotPresent"
          name: back
          ports:
            - containerPort: 8080
              hostPort: 8080
