ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-k8s-back
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-k8s-front
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: svc-k8s-back
                port:
                  number: 8080
